--- a/src/main/java/nutricelia/com/InitialPage.css
+++ b/src/main/java/nutricelia/com/InitialPage.css
@@ -9,47 +9,38 @@ body {
 }
 
 .logo img {
-    height: auto;
+    height: 250px;
 }
-nav a {
-    margin: 0 10px;
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-}
-.login-btn {
+
+.Button {
     background-color: #90EE90;
+    font-size:15px;
     border: none;
     padding: 10px;
     width: 100%;
+    height: 50px;
     cursor: pointer;
     font-weight: bold;
     border-radius: 5px;
+    margin-top: 10px;
 
 }
 main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 100vh;
+    width: auto;
 }
 .box1 {
     background: white;
+    align-items:  center;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    height: auto;
 
-}
-
-
-.register-btn {
-    background-color: #90EE90;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    cursor: pointer;
-    font-weight: bold;
-    border-radius: 5px;
 }
 
