Vistas de usuario

--- a/src/main/java/nutricelia/com/View/HomePage.html
+++ b/src/main/java/nutricelia/com/View/HomePage.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="user-profile">
         <img class="menu" src="../../../res/menu-icon.png">
-        <a href="UserDataPage.html">
+        <a href="UserScreens/UserDataPage.html">
             <button class="user-profile"><img src="../../../res/icon-user.png"></button>
         </a>
     </div>
