--- a/src/main/java/nutricelia/com/View/InitialPage.html
+++ b/src/main/java/nutricelia/com/View/InitialPage.html
@@ -18,7 +18,7 @@
         <a href="HomePage.html">
             <button class="Button">Iniciar sesión</button>
         </a>
-        <a href="SignUpPage.html">
+        <a href="UserScreens/SignUpPage.html">
             <button type="submit" class="Button">Registrarse</button>
         </a>
     </div>
