Corrección algunos errores

--- a/src/main/resources/META-INF/resources/css/userstyles.css
+++ b/src/main/resources/META-INF/resources/css/userstyles.css
@@ -8,12 +8,20 @@ body {
 
 header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: #90EE90;
     padding: 10px 20px;
 }
-
+.user-profile{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.user-profile img {
+    height: 40px;
+    border-radius: 50%;
+}
 .logo img {
     height: 50px;
 }
@@ -92,4 +100,37 @@ input[type="text"], input[type="password"], input[type="email"] {
 
 .user-actions .btn {
     margin: 5px;
+}
+.user-data {
+    background: white;
+    padding: 20px;
+    margin: 20px auto;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.data-container {
+    text-align: left;
+}
+
+.data-field {
+    margin-bottom: 15px;
+}
+
+.data-field label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #333; /* Color del texto de la etiqueta */
+}
+
+.data-field .data-value {
+    padding: 10px;
+    background-color: #f9f9f9; /* Fondo gris claro */
+    border: 1px solid #ddd; /* Borde sutil */
+    border-radius: 5px;
+    font-size: 16px;
+    color: #555; /* Color del texto del valor */
 }
