--- a/src/main/resources/META-INF/resources/css/userstyles.css
+++ b/src/main/resources/META-INF/resources/css/userstyles.css
@@ -8,11 +8,33 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start; /* Asegura que el logo se alinee a la izquierda */
     align-items: center;
     background-color: #90EE90;
     padding: 10px 20px;
 }
+
+.titulo {
+
+    padding-right: 50px;
+    text-align: center;
+    width: 100%;
+}
+
+.titulo h1 {
+    margin: 0 auto;
+    display: inline-block;
+}
+
+main {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra todo el contenido dentro del main */
+    text-align: center;  /* Asegura que los textos dentro de main estén centrados */
+}
+
+
 .user-profile{
     background-color: transparent;
     border: none;
@@ -23,6 +45,7 @@ header {
     border-radius: 50%;
 }
 .logo img {
+
     height: 50px;
 }
 
@@ -36,13 +59,6 @@ nav a {
 .user-profile img {
     height: 40px;
     border-radius: 50%;
-}
-
-main {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .container {
@@ -80,6 +96,15 @@ input[type="text"], input[type="password"], input[type="email"] {
     background-color: #76c776;
 }
 
+/* Estilo para el botón de eliminar cuenta */
+.btn-delete {
+    background-color: #FF6347;  /* Rojo tomate */
+}
+
+.btn-delete:hover {
+    background-color: #FF4500;  /* Rojo anaranjado al pasar el ratón */
+}
+
 .user-info {
     background: white;
     padding: 20px;
@@ -113,6 +138,24 @@ input[type="text"], input[type="password"], input[type="email"] {
 
 .data-container {
     text-align: left;
+    position: relative; /* Necesario para que el botón se posicione de forma absoluta */
+    padding-top: 60px; /* Aumenta el espacio entre el botón y los campos */
+}
+.btn-modify {
+    position: absolute;
+    top: 10px; /* Reducir la distancia desde la parte superior del contenedor */
+    right: 15px;
+    background-color: #90EE90;
+    border: none;
+    padding: 6px 12px; /* Hace el botón más pequeño */
+    font-size: 14px; /* Reduce el tamaño de la fuente */
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.btn-modify:hover {
+    background-color: #76c776;
 }
 
 .data-field {
