--- a/src/main/resources/META-INF/resources/css/userdata.css
+++ b/src/main/resources/META-INF/resources/css/userdata.css
@@ -248,3 +248,45 @@ input[type="text"], input[type="password"], input[type="email"] {
 .close-btn:hover {
     color: red;
 }
+
+#productos-table thead th {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 100px 10px 100px;
+    color: white;
+}
+
+#productos-table tbody td {
+    padding: 10px 0px 10px 0px;
+}
+
+#productos-table thead {
+    background-color: #90EE90;
+}
+
+#productos-table tbody {
+  background-color: white;
+}
+
+#productos-table tbody tr {
+  border-bottom: 1px solid #ccc;
+  border-spacing: 10px;
+}
+
+#productos-table button {
+  margin-right: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+#productos-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#busqueda_productos {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    gap: 10px;
+}
