--- a/src/main/resources/META-INF/resources/css/HomePage.css
+++ b/src/main/resources/META-INF/resources/css/HomePage.css
@@ -1,11 +1,15 @@
-body {
-    font-family: Arial, sans-serif;
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
+/* Header */
 header {
     display: flex;
     justify-content: space-between;
@@ -30,11 +34,13 @@ nav a {
     border-radius: 50%;
 }
 
+/* Main Content */
 main {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    flex-grow: 1; /* Hace que main ocupe todo el espacio disponible */
 }
 
 .sections-container {
@@ -61,7 +67,8 @@ main {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.shopping img{
+
+.shopping img {
     width: 250px;
     height: auto;
     border-radius: 10px;
@@ -84,8 +91,24 @@ main {
     border-radius: 5px;
     margin-top: 10px;
 }
-.user-profile{
+
+.user-profile {
     background-color: transparent;
     border: none;
     cursor: pointer;
+}
+
+/* Footer */
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    margin-top: auto; /* Empuja el footer hacia abajo */
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
 }
