--- a/src/main/resources/META-INF/resources/css/RecipeListStyles.css
+++ b/src/main/resources/META-INF/resources/css/RecipeListStyles.css
@@ -1,10 +1,13 @@
-/* Mantener el texto centrado */
-body {
+/* Hace que el body ocupe toda la altura de la pantalla */
+html, body {
     font-family: Arial, sans-serif;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    text-align: center;
+}
+main {
+    flex-grow: 1;
 }
 
 /* Header */
@@ -110,4 +113,37 @@ td {
 tr:first-child th {
     background-color: #76c776;
     color: white;
+}
+
+.buttonr {
+    background-color: #76c776;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 20px;
+    width: 100%; /* Ocupar el ancho del contenedor */
+    max-width: 300px;
+}
+
+.buttonr:hover{
+    background-color: #5fa95f;
+}
+
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    margin-top: 20px;
+    font-size: 14px;
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
 }
