--- a/src/main/resources/templates/SimilarProductsView.qute.html
+++ b/src/main/resources/templates/SimilarProductsView.qute.html
@@ -37,13 +37,14 @@
 
     <h2>Productos Similares</h2>
     <div class="similars">
-        {#for product in similarProducts}
+        {#for nutritionalValue in similarProducts}
+            {actual_product = nutritionalValue.product}
             <div class="card">
-            <img src="https://via.placeholder.com/100" alt="Producto">
-            <h3>{product.getName()}</h3>
-            <p>Calorías: {product.getNutritionalValue().getCalorias()} g |
-            Proteínas: {product.getNutritionalValue().getProteinas()} g</p>
-            <button class="button">Ver Detalles</button>
+                <img src="{actual_product.urlimagen}" alt="Producto">
+                <h3>{actual_product.name}</h3>
+                <p>Calorías: {nutritionalValue.calorias} g |
+                Proteínas: {nutritionalValue.proteinas()} g</p>
+                <button class="button">Ver Detalles</button>
             </div>
         {/for}
     </div>
