--- a/src/main/resources/templates/productView.qute.html
+++ b/src/main/resources/templates/productView.qute.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <div class="logo">
-    <img src="images/NutriCelia.png">
+    <img src="../images/NutriCelia.png">
   </div>
   <nav>
     <ul>
@@ -19,14 +19,16 @@
     </ul>
   </nav>
   <div class="user-profile">
-    <img class="menu" src="images/menu-icon.png">
+    <img class="menu" src="../images/menu-icon.png">
     <a href="../META-INF/resources/UserScreens/UserDataPage.html">
-      <button class="user-profile"><img src="images/icon-user.png"></button>
+      <button class="user-profile"><img src="../images/icon-user.png"></button>
     </a>
   </div>
 </header>
 <main>
   <h1>{product.nombre}</h1>
+  <h1>{product.urlimagen}</h1>
+
   <section class="container">
     <div class="nutritional-info">
       <h3>Valores nutricionales</h3>
