--- a/src/main/resources/META-INF/resources/css/SimilarProductView.css
+++ b/src/main/resources/META-INF/resources/css/SimilarProductView.css
@@ -1,8 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f8f8;
     text-align: center;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -21,6 +24,11 @@ nav ul li a {
     text-decoration: none;
     color: white;
     font-weight: bold;
+}
+
+main {
+    text-align: center;
+    padding: 20px;
 }
 
 
@@ -57,4 +65,18 @@ nav ul li a {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.user-profile img {
+    height: 40px;
+    border-radius: 50%;
+}
+
+.user-profile{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.logo img {
+    height: 50px;
 }
