--- a/src/main/resources/META-INF/resources/css/ProductViewStyle.css
+++ b/src/main/resources/META-INF/resources/css/ProductViewStyle.css
@@ -96,3 +96,21 @@ table th, table td {
 .logo img {
     height: 50px;
 }
+
+ .boton-similar {
+     background-color: #a8d5a2; /* Verde claro similar al encabezado */
+     border: none;
+     border-radius: 10px;
+     padding: 12px 24px;
+     font-weight: bold;
+     font-size: 16px;
+     color: white;
+     cursor: pointer;
+     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+     margin-top: 20px;
+     transition: background-color 0.3s ease;
+ }
+
+.boton-similar:hover {
+    background-color: #8ccf85;
+}
