--- a/src/main/resources/templates/productView.qute.html
+++ b/src/main/resources/templates/productView.qute.html
@@ -1,58 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>productView</title>
-  <link rel="stylesheet" href="/css/ProductViewStyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>productView</title>
+    <link rel="stylesheet" href="/css/ProductViewStyle.css">
 </head>
 <body>
 <header>
-  <div class="logo">
-    <img src="../images/NutriCelia.png">
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Productos</a></li>
-      <li><a href="#">Mis Listas</a></li>
-    </ul>
-  </nav>
-  <div class="user-profile">
-    <img class="menu" src="../images/menu-icon.png">
-    <a href="../META-INF/resources/UserScreens/UserDataPage.html">
-      <button class="user-profile"><img src="../images/icon-user.png"></button>
-    </a>
-  </div>
+    <div class="logo">
+        <img src="../images/NutriCelia.png">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Mis Listas</a></li>
+        </ul>
+    </nav>
+    <div class="user-profile">
+        <img class="menu" src="../images/menu-icon.png">
+        <a href="../META-INF/resources/UserScreens/UserDataPage.html">
+            <button class="user-profile"><img src="../images/icon-user.png"></button>
+        </a>
+    </div>
 </header>
 <main>
-  <h1>{product.nombre}</h1>
-  <h1>{product.urlimagen}</h1>
-
-  <section class="container">
-    <div class="nutritional-info">
-      <h3>Valores nutricionales</h3>
-      <table>
-        <tr><th>Valor</th><th>Unidades por 100g</th></tr>
-        <tr><td>Calorias</td><td>{nutritionalValue.calorias} kcal</td></tr>
-        <tr><td>Proteinas</td><td>{nutritionalValue.proteinas} g</td></tr>
-        <tr><td>Grasas</td><td>{nutritionalValue.grasas} g</td></tr>
-        <tr><td>Carbohidratos</td><td>{nutritionalValue.carbohidratos} g</td></tr>
-        <tr><td>Azúcar</td><td>{nutritionalValue.azucar} g</td></tr>
-        <tr><td>Sal</td><td>{nutritionalValue.sal} g</td></tr>
-      </table>
-    </div>
-    <div class="extra">
-      <div class="extra">
-        <h4>Contiene gluten: </h4>
-        <p>{product.singluten ? 'Si' : 'No'}</p>
-      </div>
-      <div class="extra">
-        <h4>Marca: </h4>
-        <p>{product.marca}</p>
-      </div>
-    </div>
-  </section>
+    <h1>{product.nombre}</h1>
+    <img src="{product.urlimagen}" }>
+    <section class="container">
+        <div class="nutritional-info">
+            <h3>Valores nutricionales</h3>
+            <table>
+                <tr>
+                    <th>Valor</th>
+                    <th>Unidades por 100g</th>
+                </tr>
+                <tr>
+                    <td>Calorias</td>
+                    <td>{nutritionalValue.calorias} kcal</td>
+                </tr>
+                <tr>
+                    <td>Proteinas</td>
+                    <td>{nutritionalValue.proteinas} g</td>
+                </tr>
+                <tr>
+                    <td>Grasas</td>
+                    <td>{nutritionalValue.grasas} g</td>
+                </tr>
+                <tr>
+                    <td>Carbohidratos</td>
+                    <td>{nutritionalValue.carbohidratos} g</td>
+                </tr>
+                <tr>
+                    <td>Azúcar</td>
+                    <td>{nutritionalValue.azucar} g</td>
+                </tr>
+                <tr>
+                    <td>Sal</td>
+                    <td>{nutritionalValue.sal} g</td>
+                </tr>
+            </table>
+        </div>
+        <div class="extra">
+            <div class="extra">
+                <h4>Contiene gluten: </h4>
+                <p>{product.singluten ? 'Si' : 'No'}</p>
+            </div>
+            <div class="extra">
+                <h4>Marca: </h4>
+                <p>{product.marca}</p>
+            </div>
+            <div>
+                <a href="similares/{product.id}">
+                    <button class="boton-similar">
+                        Buscar productos con valores nutricionales similares
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
 </main>
 </body>
 </html>
