--- a/src/main/resources/templates/productView.qute.html
+++ b/src/main/resources/templates/productView.qute.html
@@ -81,5 +81,11 @@
         </div>
     </section>
 </main>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
 </body>
 </html>
