--- a/src/main/resources/templates/similarProductsView.qute.html
+++ b/src/main/resources/templates/similarProductsView.qute.html
@@ -47,7 +47,7 @@
                     <img src="{nutritionalValue.product.urlimagen}" alt="Producto">
                     <h3>{nutritionalValue.product.nombre}</h3>
                     <p>Calorías: {nutritionalValue.calorias} g | Proteínas: {nutritionalValue.proteinas} g</p>
-                    <a href="product/{nutritionalValue.product.id}">
+                    <a href="/product/{nutritionalValue.product.id}">
                         <button class="button">Ver Detalles</button>
 
                     </a>
@@ -61,5 +61,11 @@
         {/if}
     </div>
 </div>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
 </body>
 </html>
