--- a/src/main/resources/META-INF/resources/css/compareProductsStyle.css
+++ b/src/main/resources/META-INF/resources/css/compareProductsStyle.css
@@ -1,10 +1,19 @@
-/* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #f8f8f8;
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 
 header {
     display: flex;
@@ -29,10 +38,11 @@ nav ul li a {
 main {
     text-align: center;
     padding: 20px;
+    flex: 1;
 }
 
 .container {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
@@ -64,52 +74,53 @@ table th, table td {
 }
 
 
-.extra {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    background: white;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    text-align: left;
-}
-
-.change {
-    display: inline-block;
-    margin-top: 10px;
-    color: #4CAF50;
-    text-decoration: none;
-    font-weight: bold;
-}
-
 .user-profile img {
     height: 40px;
     border-radius: 50%;
 }
 
-.user-profile{
+.user-profile {
     background-color: transparent;
     border: none;
     cursor: pointer;
 }
+
 .logo img {
     height: 50px;
 }
 
- .boton-similar {
-     background-color: #a8d5a2; /* Verde claro similar al encabezado */
-     border: none;
-     border-radius: 10px;
-     padding: 12px 24px;
-     font-weight: bold;
-     font-size: 16px;
-     color: white;
-     cursor: pointer;
-     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-     margin-top: 20px;
-     transition: background-color 0.3s ease;
- }
+.boton-similar {
+    background-color: #a8d5a2;
+    border: none;
+    border-radius: 10px;
+    padding: 12px 24px;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    transition: background-color 0.3s ease;
+}
+
+.card {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 10px;
+    display: inline-block;
+    width: 250px;
+}
+.card img {
+    width: 100px;
+    height: 100px;
+}
+.card h3 {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
 
 .boton-similar:hover {
     background-color: #8ccf85;
@@ -121,7 +132,7 @@ footer {
     text-align: center;
     padding: 15px 0;
     font-size: 14px;
-    margin-top: auto; /* Empuja el footer hacia abajo */
+    margin-top: auto;
 }
 
 .footer-content {
