--- a/src/main/resources/META-INF/resources/css/RecipeListStyles.css
+++ b/src/main/resources/META-INF/resources/css/RecipeListStyles.css
@@ -1,4 +1,3 @@
-/* Hace que el body ocupe toda la altura de la pantalla */
 html, body {
     font-family: Arial, sans-serif;
     height: 100%;
@@ -147,3 +146,31 @@ footer {
     max-width: 800px;
     margin: auto;
 }
+
+tr a {
+    text-decoration: none;
+    font-weight: bold;
+    color: inherit;
+}
+
+tr a:hover {
+    color: #5fa95f;           /* Un verde más oscuro (o el que prefieras, ej: #76c776) */
+    text-decoration: underline; /* Añade el subrayado */
+}
+
+.delete-btn {
+    font-size: 0;
+    padding: 2px 5px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    line-height: 1;
+    vertical-align: middle;
+}
+
+.delete-btn::before {
+    content: "🗑️";        /* El emoji de la papelera */
+    font-size: 16px;      /* Tamaño del emoji (ajústalo si es necesario) */
+    /* El color del emoji será el color del texto del botón */
+}
+
