--- a/src/main/resources/META-INF/resources/css/ShoppingListListing.css
+++ b/src/main/resources/META-INF/resources/css/ShoppingListListing.css
@@ -332,3 +332,32 @@ input[type="text"], input[type="password"], input[type="email"] {
     color: #000;
     opacity: 0.8;
 }
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0px;
+    background-color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    width: 300px;
+}
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
