Busqueda de producto

--- a/src/main/resources/META-INF/resources/css/productsAtList.css
+++ b/src/main/resources/META-INF/resources/css/productsAtList.css
@@ -280,8 +280,9 @@ input[type="text"], input[type="password"], input[type="email"] {
 }
 
 #productos-table {
+  margin: auto;
   border-collapse: collapse;
-  width: 100%;
+  width: 80%;
 }
 
 #busqueda_productos {
