--- a/src/main/resources/META-INF/resources/css/ShoppingListListing.css
+++ b/src/main/resources/META-INF/resources/css/ShoppingListListing.css
@@ -361,3 +361,10 @@ input[type="text"], input[type="password"], input[type="email"] {
     font-size: 20px;
     cursor: pointer;
 }
+
+#buyListsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Esto centra horizontalmente las .user-data */
+    width: 100%;
+}
