--- a/src/main/resources/META-INF/resources/css/RecipeFind.css
+++ b/src/main/resources/META-INF/resources/css/RecipeFind.css
@@ -189,6 +189,21 @@ footer {
     margin: 0 auto;
 }
 
+.save-recipe-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-left: 3px;
+}
+
+.save-recipe-btn:hover {
+    background-color: #45a049;
+}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
