--- a/src/main/resources/META-INF/resources/css/userstyles.css
+++ b/src/main/resources/META-INF/resources/css/userstyles.css
@@ -1,14 +1,18 @@
-body {
+html, body {
     font-family: Arial, sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     background-color: #d3d3d3; /* Gris claro */
     text-align: center;
 }
 
+/* Header */
 header {
     display: flex;
-    justify-content: flex-start; /* Asegura que el logo se alinee a la izquierda */
+    justify-content: space-between;
     align-items: center;
     background-color: #90EE90;
     padding: 10px 20px;
@@ -18,11 +22,39 @@ header {
     height: 50px;
 }
 
-header a{
+nav a {
+    margin: 0 15px;
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: bold;
 }
+
+.user-profile {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.user-profile img {
+    height: 40px;
+    border-radius: 50%;
+}
+
+/* Footer */
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    margin-top: auto; /* Empuja el footer hacia abajo */
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
+}
+
 
 .links {
     width: 100%; /* Hace que el contenedor ocupe todo el ancho */
@@ -39,23 +71,13 @@ header a{
     margin-right: 50px; /* Agrega el margen a la derecha */
 }
 
-.user-profile {
-    background-color: transparent;
-    outline: none;
-    border: none;
-}
-
-.user-profile img {
-    height: 40px;
-    border-radius: 50%;
-}
-
 main {
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    flex: 1;
 }
 
 .caja {
