--- a/src/main/resources/templates/similarProductsView.qute.html
+++ b/src/main/resources/templates/similarProductsView.qute.html
@@ -13,15 +13,14 @@
         <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Mis Listas</a></li>
-        </ul>
+        <a href="/HomePage.html">Inicio</a>
+        <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="/images/menu-icon.png">
-        <a href="../META-INF/resources/UserScreens/UserDataPage.html">
+        <a href="/UserScreens/UserDataPage.html">
             <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
