--- a/src/main/resources/META-INF/resources/css/ProductViewStyle.css
+++ b/src/main/resources/META-INF/resources/css/ProductViewStyle.css
@@ -1,34 +1,65 @@
 /* styles.css */
-body {
+html, body {
     font-family: Arial, sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     background-color: #f8f8f8;
 }
 
+/* Header */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #90c57e;
+    background-color: #90EE90;
     padding: 10px 20px;
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
+.logo img {
+    height: 50px;
 }
 
-nav ul li a {
+nav a {
+    margin: 0 15px;
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: bold;
 }
+
+.user-profile {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.user-profile img {
+    height: 40px;
+    border-radius: 50%;
+}
+
+/* Footer */
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    margin-top: auto; /* Empuja el footer hacia abajo */
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
+}
+
 
 main {
     text-align: center;
     padding: 20px;
+    flex: 1;
 }
 
 .container {
@@ -83,48 +114,20 @@ table th, table td {
     font-weight: bold;
 }
 
-.user-profile img {
-    height: 40px;
-    border-radius: 50%;
-}
-
-.user-profile{
-    background-color: transparent;
+.boton-similar {
+    background-color: #a8d5a2; /* Verde claro similar al encabezado */
     border: none;
+    border-radius: 10px;
+    padding: 12px 24px;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
     cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-top: 20px;
+    transition: background-color 0.3s ease;
 }
-.logo img {
-    height: 50px;
-}
-
- .boton-similar {
-     background-color: #a8d5a2; /* Verde claro similar al encabezado */
-     border: none;
-     border-radius: 10px;
-     padding: 12px 24px;
-     font-weight: bold;
-     font-size: 16px;
-     color: white;
-     cursor: pointer;
-     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-     margin-top: 20px;
-     transition: background-color 0.3s ease;
- }
 
 .boton-similar:hover {
     background-color: #8ccf85;
-}
-
-footer {
-    background-color: #529e52;
-    color: white;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 14px;
-    margin-top: auto; /* Empuja el footer hacia abajo */
-}
-
-.footer-content {
-    max-width: 800px;
-    margin: auto;
 }
