--- a/src/main/resources/META-INF/resources/css/RecipeListStyles.css
+++ b/src/main/resources/META-INF/resources/css/RecipeListStyles.css
@@ -31,14 +31,30 @@ nav a {
 
 .user-profile {
     background-color: transparent;
-    outline: none;
     border: none;
+    cursor: pointer;
 }
 
 .user-profile img {
     height: 40px;
     border-radius: 50%;
 }
+
+/* Footer */
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    margin-top: auto; /* Empuja el footer hacia abajo */
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
+}
+
 
 /* Centrar el título */
 .titulo {
@@ -131,20 +147,6 @@ tr:first-child th {
 
 .buttonr:hover{
     background-color: #5fa95f;
-}
-
-footer {
-    background-color: #529e52;
-    color: white;
-    text-align: center;
-    padding: 15px 0;
-    margin-top: 20px;
-    font-size: 14px;
-}
-
-.footer-content {
-    max-width: 800px;
-    margin: auto;
 }
 
 tr a {
