--- a/src/main/resources/META-INF/resources/css/RecipePageStyles.css
+++ b/src/main/resources/META-INF/resources/css/RecipePageStyles.css
@@ -16,16 +16,10 @@ header {
     align-items: center;
     background-color: #90EE90;
     padding: 10px 20px;
-    height: 60px; /* Ajustar la altura */
 }
 
 .logo img {
     height: 50px;
-}
-
-nav {
-    display: flex;
-    align-items: center;
 }
 
 nav a {
@@ -37,14 +31,30 @@ nav a {
 
 .user-profile {
     background-color: transparent;
-    outline: none;
     border: none;
+    cursor: pointer;
 }
 
 .user-profile img {
     height: 40px;
     border-radius: 50%;
 }
+
+/* Footer */
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    margin-top: auto; /* Empuja el footer hacia abajo */
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
+}
+
 
 /* Main Layout */
 .recipeMain {
