--- a/src/main/resources/META-INF/resources/css/compareProductsStyle.css
+++ b/src/main/resources/META-INF/resources/css/compareProductsStyle.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -15,25 +15,52 @@ body {
 }
 
 
+/* Header */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #90c57e;
+    background-color: #90EE90;
     padding: 10px 20px;
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
+.logo img {
+    height: 50px;
 }
 
-nav ul li a {
+nav a {
+    margin: 0 15px;
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: bold;
 }
+
+.user-profile {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.user-profile img {
+    height: 40px;
+    border-radius: 50%;
+}
+
+/* Footer */
+footer {
+    background-color: #529e52;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    margin-top: auto; /* Empuja el footer hacia abajo */
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: auto;
+}
+
 
 main {
     text-align: center;
@@ -73,22 +100,6 @@ table th, table td {
     border-bottom: 1px solid #ddd;
 }
 
-
-.user-profile img {
-    height: 40px;
-    border-radius: 50%;
-}
-
-.user-profile {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-.logo img {
-    height: 50px;
-}
-
 .boton-similar {
     background-color: #a8d5a2;
     border: none;
@@ -124,18 +135,4 @@ table th, table td {
 
 .boton-similar:hover {
     background-color: #8ccf85;
-}
-
-footer {
-    background-color: #529e52;
-    color: white;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 14px;
-    margin-top: auto;
-}
-
-.footer-content {
-    max-width: 800px;
-    margin: auto;
 }
