--- a/src/main/resources/templates/productSearch.qute.html
+++ b/src/main/resources/templates/productSearch.qute.html
@@ -15,15 +15,14 @@
             <img src="/images/NutriCelia.png">
         </div>
         <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Mis Listas</a></li>
-            </ul>
+            <a href="/HomePage.html">Inicio</a>
+            <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+            <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+            <a href="/ForumPage.html">Foros</a>
         </nav>
         <div class="user-profile">
             <img class="menu" src="/images/menu-icon.png">
-            <a href="../META-INF/resources/UserScreens/UserDataPage.html">
+            <a href="/UserScreens/UserDataPage.html">
                 <button class="user-profile"><img src="/images/icon-user.png"></button>
             </a>
         </div>
@@ -58,13 +57,22 @@
                     {/for}
                 {#else}
                     <tr>
-                        <th></th>
-                        <th>No se ha encontrado ningún producto</th>
-                        <th></th>
+                        <td></td>
+                        <td>No se ha encontrado ningún producto</td>
+                        <td></td>
                     </tr>
                 {/if}
             </tbody>
         </table>
 </div>
+<br>
+<br>
+<br>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
 </body>
 </html>
