--- a/src/main/resources/templates/productView.qute.html
+++ b/src/main/resources/templates/productView.qute.html
@@ -9,19 +9,18 @@
 <body>
 <header>
     <div class="logo">
-        <img src="../images/NutriCelia.png">
+        <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Mis Listas</a></li>
-        </ul>
+        <a href="/HomePage.html">Inicio</a>
+        <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
-        <img class="menu" src="../images/menu-icon.png">
-        <a href="../META-INF/resources/UserScreens/UserDataPage.html">
-            <button class="user-profile"><img src="../images/icon-user.png"></button>
+        <img class="menu" src="/images/menu-icon.png">
+        <a href="/UserScreens/UserDataPage.html">
+            <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
 </header>
@@ -81,6 +80,12 @@
         </div>
     </section>
 </main>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
 <footer>
     <div class="footer-content">
         <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
